--- a/src/components/homepage/css/common.css
+++ b/src/components/homepage/css/common.css
@@ -52,7 +52,15 @@
 .list-items:last-of-type .icon::before {
   content: none;
 }
-
+.wallet-img{
+  vertical-align: middle;
+    border-style: none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 44px;
+}
 /* ----------------------------featuredastrologers---------------- */
 .bg-color {
   background-color: rgba(211, 206, 230, 0.13);
@@ -86,6 +94,14 @@
 }
 
 /* --------------------------------login----------------------------- */
+.overlay__section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
 .custom-overlay {
   /* position: fixed;
   display: none;
@@ -94,12 +110,18 @@
   background-color: rgba(0,0,0,0.5);
 
   cursor: pointer; */
+  position: fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .login-card {
- 
   box-shadow: 0 5px 15px rgb(0 0 0 / 50%);
-  border: 1px solid rgba(0,0,0,.2);
-  margin-top: 62px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  /* margin-top: 62px; */
   /* position: absolute;
   top: 50%;
   left: 50%;
@@ -108,17 +130,17 @@
   transform: translate(-50%,-50%); */
 }
 .login-img-container {
-background-image: url('../login-form-bg.png');
-margin-top: -17px;
-height: 100%;
-background-repeat: repeat-y;
+  background-image: url("../login-form-bg-2.jpg");
+  margin-top: -17px;
+  height: 100%;
+  background-size: cover;
+  background-position: right;
 }
 .login-img-txt {
 }
 .login-form-container {
   padding: 40px 50px;
-  padding: 190px 50px;
-
+  padding: 160px 50px;
 }
 .login-form-heading {
   font-size: 36px;
@@ -152,11 +174,82 @@ background-repeat: repeat-y;
   font-size: 23px;
   margin-top: 21px;
 }
-.terms{
+.terms {
   color: #666;
   font-size: 18px;
   margin-top: 18px;
 }
 .terms span {
-  color:#c39f0f
+  color: #c39f0f;
+}
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+.custom-cross-btn {
+  background: transparent;
+  border: none;
+  top: 23px;
+  right: 47px;
+  position: absolute;
+  padding: 23px;
+  cursor: pointer;
+}
+.custom-cross-btn::before {
+  content: "";
+  width: 33px;
+  height: 3px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) rotateZ(45deg);
+}
+.custom-cross-btn::after {
+  content: "";
+  width: 33px;
+  height: 3px;
+  background-color: black;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) rotateZ(-45deg);
+}
+@media (max-width: 768px) {
+  .custom-overlay {
+    width: 95%;
+  }
+  
+}
+
+@media (min-width: 768px) {
+  .custom-overlay {
+    width: 70%;
+  }
+}
+
+@media (min-width: 992px) {
+  .custom-overlay {
+  }
+}
+
+@media (min-width: 1200px) {
+  .custom-overlay {
+  }
+}
+
+@media (min-width: 1400px) {
+  .custom-overlay {
+  }
+}
+/* ----------------------------------footer------------------------ */
+.footer__section {
+  background-color: black;
+  padding: 124px 0px;
+}
+.footer__section h1 {
+  text-align: center;
+  color: white;
+  font-size: 48px;
 }
