--- a/src/components/homepage/css/jumbotron.css
+++ b/src/components/homepage/css/jumbotron.css
@@ -37,11 +37,11 @@
     margin-top: 24px;
 }
 .cta-btn {
-    background-color: #18cf8f;
+    background-color: #f0df20;
     border-radius: 6.25px;
     font-size: 30px;
     font-weight: 600;
-    color: #fff;
+    color: black;
     padding: 20px 60px;
     cursor: pointer;
     cursor: pointer;
