--- a/src/components/admin/style.module.css
+++ b/src/components/admin/style.module.css
@@ -20,6 +20,26 @@
 }
 /* ------------------------- --update-form------------------ */
 
+
+
+/* -----------------------------astrologer-list------------------ */
+
+.astrologerList__container {
+  margin-left: 400px;
+  height: 100vh;
+  text-transform: capitalize;
+  padding-top: 11px;
+  
+}
+.astrologerList__container h2 {
+  text-align: center;
+  background-color: black;
+  color: white;
+  padding-bottom: 7px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
 /* ----------------------------astrologer-item----------------- */
 .astrologerCard__link {
 }
@@ -32,6 +52,7 @@
   display: flex;
   /* border: 1px solid black; */
   flex-wrap: wrap;
+  margin-top: 11px;
 }
 .astrologerCard__img {
   max-width: 152px;
@@ -52,21 +73,4 @@
 }
 .astrologerCard__details > div > span {
   color: #323232;
-}
-
-/* -----------------------------astrologer-list------------------ */
-
-.astrologerList__container {
-  margin-left: 400px;
-  height: 100vh;
-  text-transform: capitalize;
-  padding-top: 11px;
-}
-.astrologerList__container h2 {
-  text-align: center;
-  background-color: black;
-  color: white;
-  padding-bottom: 7px;
-  margin-left: 12px;
-  margin-right: 12px;
 }
